# London-night-workers

./: README.md  pyproject.toml  requirements.txt
data/: Night_workers_question1.xlsx  Night_workers_question2.xlsx  Night_workers_question3.xlsx
my_python_project/coursework1/: section1.py  section2.py
my_python_project/coursework2/: night_worker_queries.py
my_python_project/coursework2/seperate_query/: add_query.py  delete_query.py  select_queries.py  update_query.py
my_python_project/coursework2/tests/: conftest.py  test_queries.py
